@@ -45,6 +45,8 @@ Release 2.0.0
   property stubs (including chained answers like
   `thenReturn(...).thenCallOriginalImplementation()`). Stubbing instance properties now fails
   fast with clear guidance to use class-level stubbing (`when(F).p...`).
+- Allow `...` in fixed argument positions as an ad-hoc `any` matcher.
+  Trailing positional `...` keeps its existing "rest" semantics.
 
 
 Release 1.5.5 (November 17, 2025)
